; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_enum.c_testmain.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_enum.c_testmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"enum\00", align 1
@g1 = common dso_local global i32 0, align 4
@g3 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testmain() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @print(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @g1, align 4
  %5 = call i32 @expect(i32 0, i32 %4)
  %6 = load i32, i32* @g3, align 4
  %7 = call i32 @expect(i32 2, i32 %6)
  %8 = call i32 @expect(i32 0, i32 0)
  %9 = call i32 @expect(i32 0, i32 0)
  store i32 0, i32* %2, align 4
  %10 = call i32 @expect(i32 0, i32 0)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @expect(i32 0, i32 %11)
  ret void
}

declare dso_local i32 @print(i8*) #1

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
